# alarmi

./: .env.example  .gitignore  .mcp.json  AGENT_PROTOCOL.md  Alarm_Information_Supported_by_NBIs_20260624024044.csv  BHT-Analytics-Engine  BHT-Analytics-Engine.ps1  BHT_Engine.ps1  CLAUDE.md  CONTEXT_INVENTORY_FRONTEND.md  Cargo.toml  MO Types and Signal Information Supported by NBIs(Standard Signals).csv  NETECO_ADMIN_GUIDE_clean.txt  NETECO_CLIENT_GUIDE_clean.txt  NETECO_INTEGRATION.md  NE_sites.json  README.md  README_DEPLOY_ROCKY.md  README_STAGE1.md  README_STAGE2.md  README_STAGE3.md  README_STAGE4.md  ant-designpro-git-readme.md  communication_matrix_en_us_attachment_0000001301206748.xls  e1ebc3ef-f6cc-4572-b5a9-95c852d0067a-1782264806672_CONTEXT_NETECO_INTEGRATION.md  gis_enrich_dim_site.sql  gis_inventory_import.sql  gis_patch_02.sql  history_data.json  index.html  latest_events.json  neteco_integration_guide.md  neteco_matrix.txt  neteco_sites.csv  rocky9.md  scripts_load_sample.sh  smu_integration_guide.md  stats_data.json  stats_month.json  webservice_singal_subscription.html  (+1 more)
.claude/: settings.local.json
.claude/skills/: build-and-pack.md  db-schema-check.md  deploy-instructions.md  deploy-to-rocky.md
agent/: .env.example  Dockerfile  package.json
agent/src/mastra/: index.ts
agent/src/mastra/agents/: alarm-agent.ts
agent/src/mastra/rag/: embedder.ts  indexer.ts  qdrant.ts
agent/src/mastra/tools/: alarm-tools.ts  rag-tool.ts  site-tools.ts
config/: api.toml  api.toml.example  datakom_alarms.toml  devices.toml  eaton_alarms.toml  neteco.toml.example  poller.toml  poller.toml.example  smartlogger_alarms.toml
crates/api/: Cargo.toml
crates/api/src/: db.rs  ingest.rs  main.rs  query.rs
crates/loader/: Cargo.toml
crates/loader/src/: main.rs
crates/neteco-poller/: Cargo.toml
crates/neteco-poller/src/: client.rs  db.rs  main.rs  types.rs
crates/normalize/: Cargo.toml
crates/normalize/src/: chinese.rs  classify.rs  html.rs  lib.rs  parse.rs  types.rs
crates/normalize/tests/: real_lines.rs
crates/poller/: Cargo.toml
crates/poller/src/: breaker.rs  datakom.rs  decode.rs  main.rs  poll.rs  profile.rs  sink.rs  smartlogger.rs  state.rs  types.rs
db/: MIGRATIONS.md  migrate_neteco_v1.sql  migrate_v6.sql  migrate_v7.sql  migrate_v8.sql  migrate_v9.sql  schema.sql  schema_stage2.sql  seed_devices_v8.py  seed_dimensions.sql  seed_sites.sql
deploy/: bht-api-staging.service  bht-api.service  bht-poller.service  build_agent_docker.sh  build_in_docker.sh  docker-compose.yml  neteco-poller.service  neteco.env.example  rocky_apply_schema.sh  rocky_deploy.sh  rocky_deploy_staging.sh  rocky_setup_timescaledb.sh  setup_neteco_proxy.sh  unpack.py
docs/: DATA_MODEL.md  Huawei.ai  ds4-cs4-assesment.md
genset-inventory/: Generator_Inventory_Merged.xlsx  Genset_Inventory_Final.csv  Genset_Inventory_Final.xlsx  Genset_Inventory_Verified.csv  Genset_Inventory_Verified.xlsx  Merged_Genset_Inventory.csv  NE_elements_corrected_2d.csv  Potencijalne lokacije za agregati i baterije BSe_RR cvorista_24062025_16_03_2026.xlsx  Review_Low_Confidence_Matches.xlsx  dbo_agregat (4).xlsx
gis-map-export/: BH_Mobile_Sites.kmz  NE_elements_decimal_degrees.csv  NE_sites.json  PE_sites.json  PE_sites_decimal.csv  aa.txt
inventory/: layer_1.json  layer_12.json  layer_2.json  layer_4.json  layer_6.json  layer_8.json  layer_9.json
modbus/: alarmna_lista.json  modbus_working.py  modbusmap-sc200300.txt  plcs.json
snmp/webservice_singal_subscription_files/: webservice_singal_subscription.html
tools/: normalize_ref.py  snmp_log_poller.py
tools/genset/: merged.py
tools/gis/: convert_to_decimal.py  csv_to_kmz.py
tools/legacy/: BHT_Engine.ps1  refresh-alarms.ps1
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  colors.ts  main.tsx  utils.ts
web/src/components/: AlarmDrawer.tsx  BhLogo.tsx  HuaweiIcon.tsx  SolarIcon.tsx  Tags.tsx  VerifyDrawer.tsx
web/src/pages/: Admin.tsx  Alarms.tsx  Dashboard.tsx  Inventory.tsx  Map.tsx  NetEcoAlarms.tsx  Overview.tsx  SiteDetail.tsx  Sites.tsx  Solar.tsx  System.tsx
