# BHT Alarm Dashboard v7 — Cargo workspace
[workspace]
resolver = "2"
members = ["crates/normalize", "crates/loader", "crates/poller", "crates/api", "crates/neteco-poller"]

[workspace.package]
version = "0.9.0"
edition = "2021"
rust-version = "1.75"
license = "proprietary"
authors = ["BHT Power & Cooling"]

[workspace.dependencies]
regex = "1.10"
once_cell = "1.19"
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "signal"] }
tokio-modbus = "0.9"
tokio-postgres = "0.7"
toml = "0.8"
axum = "0.7"
deadpool-postgres = "0.14"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
