[package]
name = "bht-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum ingest/query API over the BHT TimescaleDB schema"

[dependencies]
bht-normalize = { path = "../normalize" }
axum.workspace = true
tokio.workspace = true
deadpool-postgres.workspace = true
tokio-postgres.workspace = true
tower-http.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
chrono.workspace = true

[[bin]]
name = "bht-api"
path = "src/main.rs"
