[package]
name = "bht-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum ingest/query API over the BHT TimescaleDB schema"

[dependencies]
bht-normalize = { path = "../normalize" }
axum.workspace = true
tokio.workspace = true
deadpool-postgres.workspace = true
tokio-postgres.workspace = true
tower-http.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
chrono.workspace = true
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[[bin]]
name = "bht-api"
path = "src/main.rs"
