[package]
name = "neteco-poller"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "NetEco iSitePower NBI REST poller — metrics + alarm ingestion"

[dependencies]
tokio.workspace = true
tokio-postgres = { workspace = true, features = ["with-chrono-0_4"] }
reqwest.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
chrono.workspace = true

[[bin]]
name = "neteco-poller"
path = "src/main.rs"
